--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: home
 <section id="about">
 	<div class="container">
 	  <div class="avatar">
-		<img class="img-circle" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
+		<img class="img-circle" src="Users/nguyenphi/Desktop/nguyenphi0205.github.io/assets/images/demo.jpg" alt="Responsive image">
 	  </div>
 	  <h3>I'm <strong>Nguyễn Phi</strong>, a Software Engineer.</h3>
 	  <h3>I love all things computer science and maths.</h3>
