add new file and modify

--- a/JavaScript/blog.html
+++ b/JavaScript/blog.html
@@ -4,8 +4,8 @@ title: Blog
 ---
 
 <div class="container">
-		<img class="image-angular" src="{{ site.baseurl }}/Angular/static/img/Angular.png" alt="Responsive image">  
-<h3>Post About Angular</h3>
+		<img class="image-angular" src="{{ site.baseurl }}/JavaScript/static/img/JavaScript.png" alt="Responsive image">  
+<h3>Post About JavaScript</h3>
   <div class="panel panel-default">
     <div class="panel-body">
 		{% for post in site.posts %}
