--- a/Angular/blog.html
+++ b/Angular/blog.html
@@ -5,13 +5,16 @@ title: Blog
 
 <div class="container">
 	<img class="image-angular" src="{{ site.baseurl }}/Angular/static/img/Angular.png" alt="Responsive image">
-	<h3>Post About Angular</h3>
+	<h3>Post About Angular</h3	>
+	<h2 class="article">
+		 Post
+	</h2>
 	<div class="container-fluid">
 		<div class="container">
 			<div class="row">						
 				{% for post in site.posts %}
-				<div class="col-md-4">
-					<div class="card">
+				<div class="col-md-4 corners">
+					<div class="card col-md-12">
 						<div class="card-body">
 							<h5 class="card-title">
 								<strong>
@@ -19,11 +22,10 @@ title: Blog
 								</strong>
 							</h5>
 						</div>
-						
 					</div>
 				</div>
 				{% endfor %}
 			</div>
 		</div>
 	</div>
-</div>
+</div>	
