--- a/JavaScript/blog.html
+++ b/JavaScript/blog.html
@@ -4,24 +4,28 @@ title: Blog
 ---
 
 <div class="container">
-		<img class="image-angular" src="{{ site.baseurl }}/JavaScript/static/img/JavaScript.png" alt="Responsive image">  
-<h3>Post About JavaScript</h3>
-  <div class="panel panel-default">
-    <div class="panel-body">
-		{% for post in site.posts %}
-			<div class="row">
-				 <div class="col-sm-4 col-md-4 col-lg-4">
-					 <h5 style="text-align: right">
-					 	{{ post.date | date: "%B %e, %Y" }}
-					 </h5>
-				 </div>
-				 <div class="col-sm-8 col-md-8 col-lg-8">
-					 <h5 style="text-align: left">
-					 	<strong><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></strong>
-					 </h5>
-				 </div>
+	<img class="image-angular" src="{{ site.baseurl }}/JavaScript/static/img/JavaScript.png" alt="Responsive image">
+	<h3>Post About JavaScript</h3>
+	<h2 class="article">
+		Post
+		</h2>
+		<div class="container-fluid">
+			<div class="container">
+				<div class="row">
+					{% for post in site.posts %}
+					<div class="col-md-4 corners">
+						<div class="card col-md-12">
+							<div class="card-body">
+								<h5 class="card-title">
+									<strong>
+										<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+									</strong>
+								</h5>
+							</div>
+						</div>
+					</div>
+					{% endfor %}
+				</div>
 			</div>
-	    {% endfor %}
-	</div>
-  </div>
+		</div>
 </div>
