add new react part

--- a/React/blog.html
+++ b/React/blog.html
@@ -4,8 +4,8 @@ title: Blog
 ---
 
 <div class="container">
-		<img class="image-angular" src="{{ site.baseurl }}/CSS/static/img/css3.png" alt="Responsive image">  
-<h3>Post About CSS</h3>
+		<img class="image-angular" src="{{ site.baseurl }}/React/static/img/React.png" alt="Responsive image">  
+<h3>Post About React</h3>
 <h2 class="article">
 	Post
 </h2>
