--- a/JavaScript/blog.html
+++ b/JavaScript/blog.html
@@ -13,8 +13,8 @@ title: Blog
 			<div class="container">
 				<div class="row">
 					{% for post in site.posts %}
-					<div class="col-md-4 corners">
-						<div class="card col-md-12">
+					<div class="col-md-4 ">
+						<div class="card col-md-12 corners">
 							<div class="card-body">
 								<h5 class="card-title">
 									<strong>
